# MotionFrame

./: .gitignore  AGENTS.md  Cargo.toml  GAI_ProjectsMotionFrame+clippy_errors.txt  README.md  THIRD-PARTY-LICENSES.md  THIRD-PARTY-NOTICES.md  about-preamble.md  about.hbs  about.toml  clippy.toml  deny.toml  package.json
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml  web-smoke.yml  web.yml
crates/motionframe-desktop/: Cargo.toml  build.rs
crates/motionframe-desktop/src/: app.rs  lib.rs  locale.rs  main.rs
crates/motionframe-desktop/src/cli/: args.rs  config.rs  error.rs  job.rs  mod.rs  run.rs
crates/motionframe-desktop/tests/: cli_config.rs  headless.rs
crates/motionframe-engine/: Cargo.toml
crates/motionframe-engine/benches/: farneback.rs
crates/motionframe-engine/src/: debug_dump.rs  lib.rs
crates/motionframe-engine/src/flow/: farneback.rs  mod.rs  poly.rs  pyramid.rs  tests.rs  update.rs
crates/motionframe-engine/src/gpu/: mod.rs
crates/motionframe-engine/src/gpu/shaders/: accumulate.wgsl  combine_bidir.wgsl  encode.wgsl  flow_update.wgsl  grayscale.wgsl  poly_expansion.wgsl  pyramid.wgsl  resize.wgsl  upsample.wgsl
crates/motionframe-engine/src/io/: atlas.rs  decode.rs  metadata.rs  mod.rs  sequence.rs  source.rs  tga.rs
crates/motionframe-engine/src/pipeline/: analyze.rs  atlas.rs  atlas_layout.rs  bidirectional.rs  encode.rs  mod.rs  output_detents.rs  output_naming.rs  pack.rs  run.rs  temporal.rs
crates/motionframe-engine/src/preview/: pipeline.rs  shader.wgsl
crates/motionframe-engine/src/viz/: arrows.rs  mod.rs
crates/motionframe-engine/tests/: atlas_pipeline_parity.rs  flow_parity.rs  gpu_parity.rs  io_integration.rs  shader_compile.rs
crates/motionframe-ui/: Cargo.toml
crates/motionframe-ui/src/: app.rs  i18n.rs  input_panel.rs  lib.rs  platform.rs  playback.rs  tabs.rs
crates/motionframe-web/: Cargo.toml  Trunk.toml  _headers  build.rs  index.html
crates/motionframe-web-worker/: Cargo.toml  rust-toolchain.toml
crates/motionframe-web-worker/src/: lib.rs  protocol.rs  streaming.rs  worker.rs
crates/motionframe-web/src/: app.rs  bridge.rs  lib.rs  worker_client.rs
crates/motionframe-web/static/: bench.html  bench.js
docs/superpowers/plans/: 2026-07-19-gpu-compute-pipeline.md  2026-07-19-output-naming-frame-range-config.md
docs/superpowers/specs/: 2026-07-19-output-naming-frame-range-config-design.md
scripts/: build-web-worker.sh  build-web.sh  gen-licenses.sh  package-macos.sh  serve-web.sh  verify-parity.sh  verify-quick.sh  verify.sh
tests/fixtures/explosion00/: explosion00-frame001.tga  explosion00-frame002.tga  explosion00-frame003.tga  explosion00-frame004.tga  explosion00-frame005.tga  explosion00-frame006.tga  explosion00-frame007.tga  explosion00-frame008.tga  explosion00-frame009.tga  explosion00-frame010.tga  explosion00-frame011.tga  explosion00-frame012.tga  explosion00-frame013.tga  explosion00-frame014.tga  explosion00-frame015.tga  explosion00-frame016.tga  explosion00-frame017.tga  explosion00-frame018.tga  explosion00-frame019.tga  explosion00-frame020.tga  explosion00-frame021.tga  explosion00-frame022.tga  explosion00-frame023.tga  explosion00-frame024.tga  explosion00-frame025.tga  explosion00-frame026.tga  explosion00-frame027.tga  explosion00-frame028.tga  explosion00-frame029.tga  explosion00-frame030.tga  explosion00-frame031.tga  explosion00-frame032.tga  explosion00-frame033.tga  explosion00-frame034.tga  explosion00-frame035.tga  explosion00-frame036.tga  explosion00-frame037.tga  explosion00-frame038.tga  explosion00-frame039.tga  explosion00-frame040.tga  (+60 more)
