[package]
name = "motionframe-engine"
version = "2.0.0"
edition = "2021"
rust-version = "1.95"
description = "MotionFrame core engine: optical flow, atlas pack, encoding, preview"
license = "GPL-3.0-only"

[lib]
name = "motionframe_engine"
path = "src/lib.rs"

[features]
default = ["preview"]
preview = ["dep:wgpu", "dep:bytemuck", "dep:egui", "dep:egui-wgpu"]

[dependencies]
image       = { version = "=0.25.10", default-features = false, features = ["tga", "png"] }
serde       = { version = "=1.0.228", features = ["derive"] }
serde_json  = "=1.0.149"
wide        = "=1.4.0"
thiserror   = "=2.0.18"
rayon       = "=1.12.0"
wgpu        = { version = "=29.0.3", optional = true }
bytemuck    = { version = "=1.25.0", features = ["derive"], optional = true }
egui        = { version = "=0.34.2", optional = true }
egui-wgpu   = { version = "=0.34.2", optional = true }

[lints]
workspace = true

[dev-dependencies]
criterion    = "=0.8.2"
flate2       = "=1.1.9"
naga         = "=29.0.3"

[[bench]]
name = "farneback"
harness = false
