[package]
name = "motionframe-web-worker"
version = "2.0.0"
edition = "2021"
rust-version = "1.95"
description = "MotionFrame engine wasm worker"
license = "GPL-3.0-only"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
motionframe-engine = { path = "../motionframe-engine", default-features = false }
wasm-bindgen = "=0.2.121"
wasm-bindgen-rayon = "=1.3.0"
wasm-bindgen-futures = "=0.4.71"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
serde-wasm-bindgen = "=0.6.5"
js-sys = "=0.3.98"
console_error_panic_hook = "=0.1.7"
image = { version = "=0.25.10", default-features = false, features = ["tga", "png"] }
log = "=0.4.29"
console_log = "=1.0.0"
thiserror = "=2.0.18"
lru = "=0.18.0"
serde_bytes = "=0.11.19"

[dependencies.web-sys]
version = "=0.3.98"
features = [
    "DedicatedWorkerGlobalScope",
    "MessageEvent",
    "Worker",
    "console",
]

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
